update-token fronend-signin

--- a/signin.html
+++ b/signin.html
@@ -50,7 +50,7 @@
       <a href="#" class="login__forgot">Forgot Password?</a>
     </div>
 
-    <button type="submit" class="login__button" id="savepost">Login</button>
+    <button type="submit" class="login__button" id="savepost" onclick="userLogin()">Login</button>
 
     <p class="login__register">
       Don't have an account? <a href="signup.html">Register</a>
@@ -59,7 +59,7 @@
 </div>
 
 <!--=============== MAIN JS ===============-->
-<script src="/js/main.js"></script>
 <script src="/js/jquery-3.7.1.min.js"></script>
+<script src="/js/auth.js"></script>
 </body>
 </html>
