--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </li>
             </ul>
             <form class="d-flex">
-                <button href="signin.html" class="btn btn-outline-danger" type="button" id="logoutButton" onclick="logout()">Logout</button>
+                <button  class="btn btn-outline-danger" type="button" id="logoutButton" onclick="logout()">Logout</button>
             </form>
         </div>
     </div>
@@ -130,6 +130,6 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/js/jquery-3.7.1.min.js"></script>
-<script src="/js/main.js"></script>
+<script src="/js/dashboard.js"></script>
 </body>
 </html>
