update-token fronend-dashboard-set Authorization bearer token

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <style>
-    body {
-        background-image: url("image/tree-736885_640.jpg");
-        background-size: cover; /* This makes the image cover the entire background */
-        background-repeat: no-repeat; /* Prevents the image from repeating */
-        background-position: center; /* Centers the image on the page */
-        background-attachment: fixed; /* Keeps the background image fixed when scrolling */
-        margin: 0;
-        padding: 0;
-        font-family: Arial, sans-serif; /* Optional: sets a default font for the body */
-    }
+    /*body {*/
+    /*    background-image: url("image/tree-736885_640.jpg");*/
+    /*    background-size: cover; !* This makes the image cover the entire background *!*/
+    /*    background-repeat: no-repeat; !* Prevents the image from repeating *!*/
+    /*    background-position: center; !* Centers the image on the page *!*/
+    /*    background-attachment: fixed; !* Keeps the background image fixed when scrolling *!*/
+    /*    margin: 0;*/
+    /*    padding: 0;*/
+    /*    font-family: Arial, sans-serif; !* Optional: sets a default font for the body *!*/
+    /*}*/
     .bi-house{
         color: white;
     }
@@ -125,6 +125,7 @@
                 </div>
             </div>
         </main>
+        <p class="tokenDisplay"></p>
     </div>
 </div>
 
